# oaa

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  STATUS.md  TODOS.md  pyproject.toml  requirements.txt  run_app.py  test_coverage_v3.py  test_self_heal.py
.claude/: settings.local.json
.gstack/: browse-audit.jsonl  browse.json
.gstack/qa-reports/: baseline.json  qa-report-localhost-5173-2026-05-11.md
cli/: package-lock.json  package.json
gui/: electron-builder.yml  index.html  package-lock.json  package.json  vite.config.ts
gui/dist-electron/: main.js  preload.js
gui/electron/: main.ts  preload.ts
gui/src/: App.vue
oaa/: __init__.py  __main__.py  app.py  async_io.py  cli.py  config.py  init.py  logging_config.py  wizard.py
oaa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
oaa/agent/: __init__.py  _exec_runner.py  _sandbox_runner.py  ai_search_tool.py  browser_tools.py  clone_manager.py  code_audit.py  complexity_evaluator.py  contract.py  conversation_archiver.py  extended_tools.py  handler.py  idle_inspector.py  loop.py  memory_manager.py  metrics.py  oaa_agent.py  patch_loader.py  patch_manager.py  path_utils.py  planner.py  policy.py  preferences_store.py  proposal.py  reflection_scheduler.py  repair_loop.py  simphtml.py  tools.py  (+8 more)
scripts/: build_installer.py  bundle_python.py  install_skills.py  local_llm_manager.py  verify_skills.py
tests/: MANUAL_TEST_PLAN.md  TEST_PLAN_V2.md  test_adapters.py  test_comprehensive_live.py  test_evolution.py  test_extended_tools.py  test_idle_inspector_integration.py  test_idle_integration.py  test_integration.py  test_llm_anthropic.py  test_management_api.py  test_metrics.py  test_permissions.py  test_phase1.py  test_planner.py  test_proposal.py  test_reflection.py  test_self_mod_cycle.py  test_session.py  test_skill_manager.py  test_tools.py  test_verify_skills.py  verify_phase1.py
(+99 files in other folders)
